--- a/Logistic_Regression_Manual.ipynb
+++ b/Logistic_Regression_Manual.ipynb
@@ -999,7 +999,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#reshape y as column vector\n",
+    "#reshape yr\n",
     "y = y.values.reshape((-1,))"
    ]
   },
@@ -1114,7 +1114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#now here a important note don't mess up shape of w it should be row vector\n",
+    "#now here a important note don't mess up shape of w\n",
     "m , n =X_train.shape\n",
     "w_in = np.zeros((n,))\n",
     "b_in = 0.0\n",
